<resources>
    <string name="app_name">Work</string>
    <string name="pendingChange">Pending</string>
    <string name="compeleteChange">Completed</string>
    <string name="switchText">Complete</string>
    <string name="eventName">Event</string>
    <string name="date_time">date, time</string>
    <string name="venue">Venue</string>
    <string name="dateCompleted">Date</string>
    <string name="workCompleted">Work</string>
    <string name="nameCompleted">Name of the member</string>
    <string name="dayCompleted">Day</string>
</resources>
