<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/day"
        android:text="@string/dayCompleted"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:text="@string/dateCompleted"
        android:layout_below="@+id/day"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/work"
        android:text="@string/workCompleted"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:text="@string/nameCompleted"
        android:layout_below="@+id/work"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>