<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.adgvit.work.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt1"
        android:layout_marginStart="20dp"
        android:text="@string/eventName"
        android:textSize="35sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt2"
        android:layout_marginStart="20dp"
        android:text="@string/date_time"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_below="@+id/txt1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt3"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/txt2"
        android:text="@string/venue"
        android:textColor="#000000"
        />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/txt3"
        android:layout_marginTop="20dp"
        android:text="@string/switchText"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>
